# sync-analysis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
analyzers/: CMakeLists.txt  lock-shadow.cpp  mutex-lock-order.cpp  redundant-recursive-mutex.cpp  redundant-rwlock.cpp  useless-lock.cpp  utils.hpp
benchmarks/: CMakeLists.txt  latency_benchmark.cpp  throughput_benchmark.cpp
checks/: list.cpp  mutex_lock_order.cpp
cmake/: SyanAnalyzer.cmake  SyanExtension.cmake
executable/: CMakeLists.txt  active_objects_db.cpp  active_objects_db.hpp  check.hpp  check_api.cpp  database.cpp  dump_file_header_compat.hpp  environment.cpp  environment.hpp  event.cpp  event.hpp  event_file_reader.cpp  event_file_reader.hpp  internal_check_registerer.hpp  lib_compat.hpp  logger.cpp  logger.hpp  main.cpp  report.cpp  report.hpp  run_analysis.cpp  run_analysis.hpp  stacktrace_symbolizer.hpp  stacktrace_symbolizer_macos.cpp  utils.cpp  utils.hpp
executable/checks/: example_check.cpp  list.cpp  mutex_lock_order.cpp
executable/include/check_api/: check_api.hpp  database.hpp  event.hpp  report.hpp
executable/include/syan_analyzer_api/: database.hpp  event.hpp  report.hpp  syan_analyzer_api.hpp
executable/include/syan_extension_api/: database.hpp  event.hpp  report.hpp  syan_extension_api.hpp
executable/src/: analyzer.cpp  analyzer.hpp  database.cpp  debug.cpp  debug.hpp  dump_file_header_compat.hpp  environment.cpp  environment.hpp  event.cpp  event_file_reader.cpp  event_file_reader.hpp  extension.cpp  extension.hpp  find_analyzers.cpp  find_analyzers.hpp  find_extensions.cpp  find_extensions.hpp  global_environment.cpp  global_environment.hpp  main.cpp  options.cpp  options.hpp  report.cpp  run_analysis.cpp  run_analysis.hpp  stacktrace_symbolizer.cpp  stacktrace_symbolizer.hpp  stacktrace_symbolizer_linux.cpp  stacktrace_symbolizer_macos.cpp
extensions/: CMakeLists.txt  list.cpp  lock-shadow.cpp  mutex-lock-order.cpp  mutex_lock_order.cpp  redundant-recursive-mutex.cpp  redundant-rwlock.cpp  redundant_recursive_mutex.cpp  useless-lock.cpp
integration/: CMakeLists.txt  pthread_shim.c
integration/cxx_sync/: exception.cpp  exception.hpp  mutex.cpp  mutex.hpp  recursive_mutex.cpp  recursive_mutex.hpp  rwlock.cpp  rwlock.hpp  thread.cpp  thread.hpp
integration/cxxsync/: mutex.cpp  recursive_mutex.cpp  rwlock.cpp  thread.cpp
integration/cxxsync/include/cxxsync/: mutex.hpp  recursive_mutex.hpp  rwlock.hpp  thread.hpp
integration/shared/: events.h  events.hpp
lib/: CMakeLists.txt
lib/include/: sync_analysis.h
lib/src/: backtrace.c  backtrace.h  buffer.c  buffer.h  dump_file_header.c  dump_file_header.h  event.h  event_time.c  event_time.h  event_type.h  global_buffer.c  global_buffer.h  handle_event.c  handle_event.cpp  handle_event.h  init.c  init.cpp  init.h  open_output_stream.c  open_output_stream.h  sync_analysis.c  sync_analysis.cpp  worker_thread.c  worker_thread.h
paper/: analiza_statica_a_primitivelor_de_sincronizare.lof  analiza_statica_a_primitivelor_de_sincronizare.lol  analiza_statica_a_primitivelor_de_sincronizare.tex  bibliografie.bib
paper/building_blocks/: biblioteca_de_capturare_a_evenimentelor.tex  instalare_si_compilare.tex  introducere.tex  tehnologii_folosite.tex
paper/src/: 0.coperta.tex  1.introducere.tex  2.tehnologii_folosite.tex  3.1.instalare_si_compilare.tex  3.2.biblioteca_de_capturare_a_evenimentelor.tex  3.3.biblioteci_de_integrare.tex  3.3.programul_independent_syncanalysis.tex  3.5.analizori_preinstalati.tex  3.descrierea_proiectului.tex  4.1.biblioteci_de_integrare.tex  4.1.tipuri_de_evenimente.tex  4.2.analizori.tex  4.2.biblioteci_de_integrare.tex  4.3.analizori.tex  4.4.testele_analizorilor.tex  4.exemple_de_utilizare.tex  4.exemplu_de_unealta_de_analiza.tex  4.exemplu_de_utilizare.tex  5.concluzii.tex
tests/: CMakeLists.txt  run_analyzer_test.cpp  run_extension_test.cpp
tests/analyzers/: CMakeLists.txt  run_analyzer_test.cpp
tests/analyzers/lock-shadow/: negative.single_mutex.cpp  positive.two_mutexes.cpp
tests/analyzers/mutex-lock-order/: negative.three_mutexes_ordered_correctly.cpp  positive.three_mutexes.cpp
tests/analyzers/redundant-recursive-mutex/: positive.on_mutex_destroyed.cpp  positive.on_mutex_leaked.cpp
tests/analyzers/redundant-rwlock/: negative.used_as_both_rd_and_wr.cpp  positive.used_only_as_wr_lock.cpp
tests/analyzers/useless-lock/: negative.rwlock_rd_lock.cpp  positive.mutex_single_thread_lock.cpp  positive.mutex_single_thread_try_lock.cpp  positive.rec_mutex_single_thread.cpp  positive.rec_mutex_unused.cpp  positive.rwlock_single_thread_rd_lock.cpp  positive.rwlock_single_thread_try_rd_lock.cpp  positive.rwlock_single_thread_try_wr_lock.cpp  positive.rwlock_single_thread_wr_lock.cpp
tests/deadlock/: mutex_ordering.cpp
tests/lock-shadow/: negative.rwlock_rd_outside_shadow.cpp  negative.single_mutex.cpp  negative.sometimes_not_shadowed.cpp  positive.mutex_and_rw_lock.cpp  positive.three_locks.cpp  positive.two_mutexes.cpp
tests/mutex-lock-order/: negative.three_mutexes_ordered_correctly.cpp  positive.two_mutexes.cpp
tests/redundant-recursive-mutex/: negative.rec_mutex_used_correctly.cpp  negative.unused_leaked_mutex.cpp  positive.on_mutex_destroyed.cpp  positive.on_mutex_leaked.cpp
tests/redundant-rwlock/: negative.used_as_both_rd_and_wr.cpp  positive.used_only_as_rd_lock.cpp  positive.used_only_as_wr_lock.cpp
tests/stacktrace/: CMakeLists.txt  event_emitter.cpp  runner.cpp
tests/useless-lock/: negative.mutex_failed_try_lock.cpp  negative.mutex_lock.cpp  negative.rwlock_rd_lock.cpp  positive.mutex_single_thread_lock.cpp  positive.mutex_single_thread_try_lock.cpp  positive.mutex_unused.cpp  positive.rec_mutex_single_thread.cpp  positive.rec_mutex_unused.cpp  positive.rwlock_single_thread_rd_lock.cpp  positive.rwlock_single_thread_try_rd_lock.cpp  positive.rwlock_single_thread_try_wr_lock.cpp  positive.rwlock_single_thread_wr_lock.cpp  positive.rwlock_unused.cpp
text/: main.tex  titlepage.tex
text/src/: 0.coperta.tex  1.introducere.tex  4.exemple_de_utilizare.tex
